--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,6 @@
         tools:targetApi="31">
         <activity
             android:name=".Main2Activity"
-            android:exported="true" />
-
-        <activity
-            android:name=".MainActivity2"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +22,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".WelcomeActivity"
+            android:name=".UserProductActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ProductActivity"
             android:exported="true" />
     </application>
 
