Ajouter produit Afficher produit Cration de toolbar Création de table utiliseur

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Ecomerce"
         tools:targetApi="31">
         <activity
+            android:name=".Product"
+            android:exported="false"
+            android:label="@string/title_activity_product"
+            android:theme="@style/Theme.Ecomerce" />
+        <activity
             android:name=".Main2Activity"
             android:exported="true">
             <intent-filter>
