Remove uncessary features rolling back to Authentification System

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:label="@string/title_activity_product"
             android:theme="@style/Theme.Ecomerce" />
         <activity
-            android:name=".Main2Activity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,12 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".UserProductActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ProductActivity"
-            android:exported="true" />
+
     </application>
 
 </manifest>
